tests/ui/closures/closure-return-type-wf.stderr
error[E0277]: the trait bound `u32: Bound` is not satisfied
  --> $DIR/closure-return-type-wf.rs:18:27
   |
LL |     constrain_return(1u32, || NeedsBound(1u32));
   |                           ^^ the trait `Bound` is not implemented for `u32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/closure-return-type-wf.rs:9:1
   |
LL | trait Bound {}
   | ^^^^^^^^^^^
note: required by a bound in `NeedsBound`
  --> $DIR/closure-return-type-wf.rs:11:22
   |
LL | struct NeedsBound<T: Bound>(T);
   |                      ^^^^^ required by this bound in `NeedsBound`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
